--- a/Projeto-site/index.html
+++ b/Projeto-site/index.html
@@ -49,13 +49,33 @@
                             <a class="botao destaque" id="cadastrar_acesso">Cadastre-se</a>
                         </li>
                     </nav>
-                    <div class="nome-logado">
-                        Olá, <span id="nome_logado"></span>
-                    </div>
 
+                    <span class="hover-login">
+                        <div class="nome-logado">
+                            Olá, <span id="nome_logado"></span>
+                        </div>
+                        <ul class="menu-logado flex">
+                            <li>
+                                <img src="img/user.png" class="icon-user">
+                                <a href="#">Meu perfil</a>
+                            </li>
+                            <li>
+                                <img src="img/settings.png" class="icon-user">
+                                <a href="#">Configurações</a>
+                            </li>
+                            <li>
+                                <img src="img/question.png" class="icon-user">
+                                <a href="#">Ajuda</a>
+                            </li>
+                            <li>
+                                <img src="img/logout.png" class="icon-user">
+                                <a href="#">Sair</a>
+                            </li>
+                        </ul>
+                    </span>
 
                     <!--mini menu-->
-                    <div class="menu-mini">
+                    <!-- <div class="menu-mini">
                         <img src="img/menu.png">
                         <ul class="sub-menu flex">
                             <li><a href="index.html">Início</a></li>
@@ -64,7 +84,7 @@
                             <li><a href="#">Fazer Login</a></li>
                             <li><a href="#">Criar uma conta</a></li>
                         </ul>
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
